<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    tools:context="com.zohdy.maxburger.activities.SignInActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_with_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/flamabold"
            android:hint="Tlf Nr."
            android:inputType="phone"
            android:text="26719945"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textCursorDrawable="@color/cursor_color"
            android:textSize="@dimen/text_large"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:textCursorDrawable="@color/cursor_color"
            android:fontFamily="@font/flamabold"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="1234"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="@dimen/text_large"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/primary_light"
        android:fontFamily="@font/flamabold"
        android:padding="@dimen/margin_large"
        android:text="Log Ind"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/margin_medium"
        android:textStyle="bold"/>

</RelativeLayout>
